--- a/package.json
+++ b/package.json
@@ -3,12 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tanstack/react-query": "5.72.2",
+    "@tanstack/react-query-devtools": "5.72.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "1.8.4",
+    "bootstrap": "5.3.5",
+    "lottie-web": "5.12.2",
     "react": "^19.1.0",
+    "react-bootstrap": "2.10.9",
     "react-dom": "^19.1.0",
+    "react-router-dom": "7.5.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0"
   },
