--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "1.8.4",
     "bootstrap": "5.3.5",
+    "bootstrap-icons": "1.11.3",
     "lottie-web": "5.12.2",
     "react": "^19.1.0",
     "react-bootstrap": "2.10.9",
