--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,12 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# env files
+.env
+.env.local
+.env.development
+.env.production
+
+# OS
+.DS_Store
